# Recursive-Descent

./: .gitignore  CMakeLists.txt  README.md  main.cpp  readme.md
docker-build-image/: Dockerfile  docker-entrypoint
src/: Assign.h  Exp.h  F.h  Idlist.h  Listst.h  Parser.cpp  Parser.h  Prog.h  Read.h  St.h  T.h  Type.h  Var.h  Write.h  idlist.h
src/Common/: Args.cpp  Args.h  IFunction.cpp  IFunction.h  NonTerminalSymbols.h  TerminalSymbols.h  Utils.h
src/Descent/: Assign.h  Exp.h  F.h  Idlist.h  Listst.h  Prog.h  Read.h  St.h  Type.h  Var.h  Write.h
src/Descent/Common/: IFunction.cpp  IFunction.h  NonTerminalSymbols.h  Utils.h
tests/: 1.pas  CMakeLists.txt  RecursiveDescent.test.cpp
tests/files/: default.pas  invalid-empty-idlist.txt  invalid-exp-two-same-brackets.txt  invalid-exp-two-signs.txt  invalid-exp-with-single-plus.txt  invalid-no-semicolon.txt  invalid-prog.pas  invalid-prog.txt  invalid-unbalanced-parentheses.txt  invalid-wrong-id.txt  valid-example.txt  valid-exp-with-lot-of-brackets.txt  valid-exp-with-parentheses.txt  valid-string-type.txt
